authui/src/authflowv2/components/widget.css
@layer components {
  :root {
    --widget__bg-color: var(--color-bg-base);
    --widget__width: 100%;
    --widget__max-width: 400px;
    --widget__border-radius: 0;
    --widget__box-shadow: none;
    --widget__border: none;
    --widget__bg_position: center;
    --widget__bg_repeat: no-repeat;
    --widget__bg_size: cover;

    @media (min-width: theme("screens.tablet")) {
      --widget__border-radius: var(--border-radius-large);
      --widget__box-shadow: none;
      --widget__border: none;
    }
  }

  .widget {
    width: var(--widget__width);
    max-width: var(--widget__max-width);
    border-radius: var(--widget__border-radius);
    border: var(--widget__border);
    box-shadow: var(--widget__box-shadow);
    background-color: var(--widget__bg-color);
    background-image: var(--widget__bg-image);
    background-repeat: var(--widget__bg_repeat);
    background-position: var(--widget__bg_position);
    background-size: var(--widget__bg_size);
    @apply flex flex-col;
    @apply relative;
    @apply px-6 pt-8 pb-10;
  }

  :root:not([alignment-content]) .widget {
    /* This rule is to prevent ui shifting before the attribute added */
    @apply invisible;
  }
}

